fix with gap

--- a/src/components/UsersCards/usersCards.scss
+++ b/src/components/UsersCards/usersCards.scss
@@ -41,5 +41,8 @@
       justify-content: center;
       align-items: center;
     }
+    @include for-1024px {
+      gap: 29px;
+    }
   }
 }
